@@ -287,6 +287,22 @@ struct IntOfMinSize {
     using utype = typename IntOfSize<nextPowerOfTwo(bytes)>::utype;
 };
 
+/**
+ * Gives access to native integer types that hold _at least_ \a k bits,
+ * where \a k may be any compile-time constant.
+ *
+ * \tparam bytes the minimum number of bits in the native integer types
+ * (i.e., the integer \a k described above).
+ *
+ * \nopython
+ *
+ * \see IntOfSize
+ *
+ * \ingroup utilities
+ */
+template <int bits>
+using IntOfMinBits = IntOfMinSize<(bits + 7) / 8>;
+
 #ifdef __DOXYGEN
     /**
      * Defined if and only if native 128-bit arithmetic is available on
